Trigger GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p>Console app that generates customer invoices with defensive input validation and file output. Demonstrates Java fundamentals, OOP, and I/O.</p>
           <ul class="meta">
             <li><strong>Tech:</strong> Java</li>
-            <li><strong>Repo:</strong> <a href="https://github.com/JulaniChonco" target="_blank" rel="noopener">See GitHub</a></li>
+            <li><strong>Repo:</strong> <a href="https://github.com/JulaniChonco/QuickFood" target="_blank" rel="noopener">See GitHub</a></li>
           </ul>
         </article>
 
@@ -91,7 +91,7 @@
           <p>Project management system for a structural engineering firm. Full CRUD with JDBC, reporting, and data integrity checks.</p>
           <ul class="meta">
             <li><strong>Tech:</strong> Java, MySQL, JDBC</li>
-            <li><strong>Repo:</strong> <a href="https://github.com/JulaniChonco" target="_blank" rel="noopener">See GitHub</a></li>
+            <li><strong>Repo:</strong> <a href="https://github.com/JulaniChonco/" target="_blank" rel="noopener">See GitHub</a></li>
           </ul>
         </article>
 
@@ -105,11 +105,15 @@
         </article>
 
         <article class="card">
-          <h4>Maintenance Manager (Node/Express + MongoDB + React)</h4>
-          <p>Full‑stack app to track maintenance tasks, assets, and statuses with a React front‑end and REST API backend.</p>
+          <h4>Online Portfolio & Resume (HTML/CSS/JS)</h4>
+          <p>Personal website showcasing my resume, projects, skills, and contact info — built with a clean, responsive layout, tabbed navigation, and a light/dark theme toggle.</p>
           <ul class="meta">
-            <li><strong>Tech:</strong> Node.js, Express, MongoDB, React</li>
-            <li><strong>Repo:</strong> <a href="https://github.com/JulaniChonco" target="_blank" rel="noopener">See GitHub</a></li>
+            <li><strong>Tech:</strong> HTML, CSS, JavaScript</li>
+            <li><strong>Repo:</strong> 
+              <a href="https://github.com/JulaniChonco/J.V-Chonco-Resume" target="_blank" rel="noopener">
+                J.V-Chonco-Resume
+              </a>
+            </li>
           </ul>
         </article>
 
